used base-64 encoded bytes array rather than string.